
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int DISPLAY_OFF ;
 int DISPLAY_ON ;
 int J_A ;
 int J_B ;
 int bombs () ;
 int delay (int ) ;
 int disable_interrupts () ;
 int enable_interrupts () ;
 int enemys () ;
 int init_enemy () ;
 int init_kirai () ;
 int init_player () ;
 int init_score () ;
 int init_screen () ;
 int init_tama () ;
 int k_left ;
 int k_right ;
 int kirai () ;
 int player () ;
 int pw ;
 int show_gover () ;

void main()
{
  disable_interrupts();
  DISPLAY_OFF;

  init_screen();
  init_score();
  init_player();
  init_tama();
  init_enemy();
  init_kirai();
  show_gover();
  k_right = J_A;
  k_left = J_B;
  DISPLAY_ON;
  enable_interrupts();

  while(1) {
    delay( pw );
    player();
    bombs();
    enemys();
    kirai();
  }
}
